<resources>
    <string name="app_name">ListaTarefas2</string>
    <string name="bt_compromisso">Settings</string>
    <string name="title_activity_formulario">Formulario</string>
    <string name="title_activity_evento">Evento</string>
    <string name="title_activity_calendario">Calendario</string>
    <string name="title_activity_grid_layout">GridLayout</string>
    <string name="title_activity_tela_de_alteracao">Tela_de_alteracao</string>
    <string name="bt_agendar">agendar</string>
    <string name="bt_alterar">alterar</string>
    <string name="bt_cancelar">cancelar</string>
    <string name="bt_cancelamento">cancelar</string>
    <string name="titulo" />
    <string name="tipo_evento">Tipo do evento:</string>
    <string name="edit_tipo_evento" />
    <string name="titulo2">REPETIR:</string>
    <string name="ocorrencias">Ocorrencias:</string>
    <string name="repeticao">A cada:</string>
    <string name="opcao_de_termino">Termina:</string>
    <string name="radioButton1">Sempre</string>
    <string name="radioButton2">Após</string>
    <string name="radioButton3">Em</string>
    <string name="textView2">ocorrências</string>
    <string name="TextView2">ocorrencias</string>
    <string name="textView3" />
    <string name="bt_cadastrar">cadastrar</string>
    <string name="bt_cancela">cancelar</string>
    <string name="tipo_de_evento">tipo de evento</string>
    <string name="dados">dados</string>
    <string name="Horario_inicial">Horario inicial:</string>
    <string name="v_horario_inicial">v_horario_inicial</string>
    <string name="Descricao">Descrição do evento:</string>
    <string name="v_descricao">v_descricao</string>
    <string name="Tipo_do_evento">Tipo do evento:</string>
    <string name="v_tipo_do_evento">v_tipo_do_evento</string>
    <string name="participante">Participante (s):</string>
    <string name="edit_participante" />
    <string name="edit_participantes">edit_participantes</string>
    <string name="Titulo2" />
    <string name="bt_voltar">voltar</string>
    <string name="spinner2">spinner2</string>
    <string name="spinner3">spinner3</string>
    <string name="participantes">participantes</string>
    <string name="radio">radio</string>
    <string name="data_inicio">Data do evento:</string>
    <string name="v_data_inicio">v_data_inicio</string>
    <string name="bt_deletar">deletar</string>
    <string name="v_data_de_compromisso" />
    <string name="title_activity_tela_de_alteracao2">Tela_de_alteracao2</string>
    <string name="title_activity_tela_de_cadastro">Tela_de_cadastro</string>
    <string name="title_activity_tela_de_cadastro2">Tela_de_cadastro2</string>
    <string name="title_activity_tela_de_cancelar">Tela_de_cancelar</string>
    <string name="title_activity_tela_de_cancelar2">Tela_de_cancelar2</string>
    <string name="title_activity_tela_de_opcao">tela_de_opcao</string>
    <string name="action_settings" />
</resources>
