<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eumesmo.listatarefas2.Tela_de_cancelar2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ocorrencias"
        android:id="@+id/ocorrencias"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/repeticao"
        android:id="@+id/repeticao"
        android:layout_below="@+id/spinner2"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_below="@+id/ocorrencias"
        android:layout_alignEnd="@+id/ocorrencias" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_below="@+id/repeticao"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/ocorrencias" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/opcao_de_termino"
        android:id="@+id/opcao_de_termino"
        android:layout_below="@+id/spinner3"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="voltar"
        android:id="@+id/bt_voltar"
        android:layout_alignTop="@+id/bt_cancelar"
        android:layout_toEndOf="@+id/spinner3" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/opcao_de_termino"
        android:id="@+id/radioGroup"
        android:layout_alignEnd="@+id/opcao_de_termino">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Após"
            android:id="@+id/radioButton1"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sempre"
            android:id="@+id/radioButton2"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton3"
            android:checked="true"
            android:id="@+id/radioButton3" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancelar"
        android:id="@+id/bt_cancelar"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignTop="@+id/radioGroup"
        android:layout_toEndOf="@+id/radioGroup"
        android:layout_marginLeft="10dp" />

    <EditText
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:id="@+id/editText2"
        android:layout_above="@+id/bt_cancelar"
        android:layout_toEndOf="@+id/repeticao"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textView2"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:layout_marginTop="-10dp" />




</RelativeLayout>